syntax = "proto3";

package communication;
option go_package = "https://github.com/JacobMoller/MiniProject3;protobuf";

service Replication {
  // Sends a greeting for a new node participant
  rpc NewNode (NewNodeRequest) returns (NewNodeReply) {}
}

// The request message containing the Node's name.
message NewNodeRequest {
  string name = 1;
  enum Type {
    Server = 0;
    FrontEnd = 1;
  }
  Type type = 2;
}

// The response message containing if the addition was succesful
message NewNodeReply {
}